--- a/web/index.html
+++ b/web/index.html
@@ -17,11 +17,16 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <!-- iOS Safe are issue-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> 
+
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutter_application_3">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  
 
   <title>flutter_application_3</title>
   <link rel="manifest" href="manifest.json">
